--- a/task3/index.html
+++ b/task3/index.html
@@ -17,13 +17,7 @@
         // Перетворення числа у рядок
         const numberString = number.toString();
 
-        // Виведення рядка з цифрами через пробіл
-        const result = numberString.slice(0, 1) + " " +
-            numberString.slice(1, 2) + " " +
-            numberString.slice(2, 3) + " " +
-            numberString.slice(3, 4) + " " +
-            numberString.slice(4, 5);
-
+        const result = `${numberString.slice(0, 1)} ${numberString.slice(1, 2)} ${numberString.slice(2, 3)} ${numberString.slice(3, 4)} ${numberString.slice(4, 5)} ${numberString.slice(5, 6)}`
         console.log(result);
     </script>
 </body>
